--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="w-2/4">
                     <div class="flex justify-between my-2">
                         <h2 class="text-xs font-bold">Best Price</h2>
-                        <h2 class="text-xs font-bold">$<span>1299</span></h2>
+                        <h2 class="text-xs font-bold">$<span id="best-price">1299</span></h2>
                     </div>
                     <hr>
                     <div class="flex justify-between my-2">
@@ -71,7 +71,7 @@
                     <!-- <hr style="color:red;"> -->
                     <div class="flex justify-between my-2 ">
                         <h2 class="text-xs font-bold">Total Price</h2>
-                        <h2 class="text-xs font-bold">$<span>1299</span></h2>
+                        <h2 class="text-xs font-bold">$<span id="total-price">1299</span></h2>
                     </div>
                     <hr>
                 </div>
