--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
                 <form action="" class="my-2">
                     <h3 class="text-xs mb-2 ">Add Pomo code</h3>
-                    <input class="border rounded pb-2" type="text">
-                    <button class="bg-red-600 p-2 text-xs text-white rounded hover:bg-red-700">Apply</button>
+                    <input id="pomo-code" class="border rounded px-4 pb-2" type="text">
+                    <button id="pomo-apply" class="bg-red-600 p-2 text-xs text-white rounded hover:bg-red-700">Apply</button>
                 </form>
             </div>
 
         </section>
         <section class="border-t-2  border-gray-200 pb-2">
-            <h1 class="text-center text-2xl font-semibold pt-2">Total: $<span>1299</span></h1>
+            <h1  class="text-center text-2xl font-semibold pt-2">Total: $<span id="footer-total-price">1299</span></h1>
         </section>
 
     </main>
