--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- mac cart main  part -->
     <main class="w-2/3 mx-auto mt-4">
         <section class="grid grid-cols-2 ">
+            <!-- mac image  -->
             <img class="w-4/6 ml-28" src="./images/mac.png" alt="">
             <div class="">
                 <div class="pb-2 w-3/4 ">
@@ -24,6 +25,7 @@
                         16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB 4 ports Magic
                         Mouse Magic Keyboard- US English</p>
                 </div>
+                <!-- button part -->
                 <div class="pb-2">
                     <h3 class="font-bold ">Memory</h3>
                     <button id="memory-8gb" class="border p-2 text-xs hover:bg-gray-800 hover:text-white rounded">8GB unified memory
@@ -48,6 +50,7 @@
                         Delivery charge $20 </button>
 
                 </div>
+                <!-- price list  -->
                 <div class="w-2/4">
                     <div class="flex justify-between my-2">
                         <h2 class="text-xs font-bold">Best Price</h2>
@@ -68,21 +71,21 @@
                         <h2 class="text-xs font-bold">Delivery charge</h2>
                         <h2 class="text-xs font-bold ">$<span id="delivery-cost">0</span></h2>
                     </div>
-                    <!-- <hr style="color:red;"> -->
+                    
                     <div class="flex justify-between my-2 ">
                         <h2 class="text-xs font-bold">Total Price</h2>
                         <h2 class="text-xs font-bold">$<span id="total-price">1299</span></h2>
                     </div>
                     <hr>
                 </div>
-
+                <!-- input field pomo code  -->
                 <form action="" class="my-2">
                     <h3 class="text-xs mb-2 ">Add Pomo code</h3>
                     <input id="pomo-code" class="border rounded px-4 pb-2" type="text">
                     <button id="pomo-apply" class="bg-red-600 p-2 text-xs text-white rounded hover:bg-red-700">Apply</button>
                 </form>
             </div>
-
+            <!-- footer  -->
         </section>
         <section class="border-t-2  border-gray-200 pb-2">
             <h1  class="text-center text-2xl font-semibold pt-2">Total: $<span id="footer-total-price">1299</span></h1>
